// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`a hover clause on native stays on the runtime path 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <YStack backgroundColor="red hover:green" />
      )
    }
"
`;

exports[`a named group hover clause on native stays on the runtime path 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <YStack group="row">
          <YStack
            backgroundColor="red group-hover/row:green"
          />
        </YStack>
      )
    }
"
`;

exports[`a named group press clause on native stays on the runtime path 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <YStack group="row">
          <YStack
            backgroundColor="red group-press/row:green"
          />
        </YStack>
      )
    }
"
`;

exports[`a theme clause on native de-opts to the runtime path 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <YStack backgroundColor="red dark:green" />
      )
    }
"
`;

exports[`basic conditional extraction 1`] = `
"
    import { YStack } from 'tamagui'
    let x = true
    export function Test() {
      return (
        <>
          <YStack backgroundColor={x ? 'red' : 'blue'} />
          <YStack {...x && { backgroundColor: 'red' }} />
        </>
      )
    }
"
`;

exports[`basic extraction 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test() {
      return (
        <__TamaguiNativeView style={{"flexDirection":"column","backgroundColor":"red"}} />
      )
    }

const __TamaguiNativeView = require('react-native').View;"
`;

exports[`do NOT flatten dynamic values with theme access 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack bg='color' height={props.height}/>
      )
    }
"
`;

exports[`do NOT flatten dynamic values with theme access, dynamic values, and conditional 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack bg={props.isLoading ? 'color' : 'red'} height={props.height}/>
      )
    }
"
`;

exports[`do NOT flatten multiple dynamic values with theme access and conditional 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack bg={props.isLoading ? 'color' : 'red'} height={props.height} width={props.width}/>
      )
    }
"
`;

exports[`dynamic ternary remains on the runtime component 1`] = `
"
  import { View } from 'tamagui'
  export function Test(props) {
    return (
      <View marginBottom={props !== 123 ? 12 : 0} />
    )
  }
"
`;

exports[`flat transform props 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(isLoading) {
      return (
        <YStack
          scale={isLoading ? 1 : 2}
          x={10}
          y={20}
          rotate="10deg"
        />
      )
    }
"
`;

exports[`handles style order merge properly 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <YStack
          scale={props.isLoading ? 1 : 2}
          x={10}
          {...props}
          rotate="10deg"
        />
      )
    }
"
`;

exports[`normalize dynamic values with no theme access 1`] = `
"
    import { YStack } from 'tamagui'
    const height = 200
    export function Test(props) {
      return (
        <YStack height={height} width={props.width}/>
      )
    }
"
`;

exports[`normalize dynamic values with theme access only 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test(props) {
      return (
        <__TamaguiNativeView style={{"flexDirection":"column","backgroundColor":"hsla(0, 0%, 100%, 1)"}}/>
      )
    }

const __TamaguiNativeView = require('react-native').View;"
`;

exports[`normalize ternaries with the conditional dynamic values 1`] = `
"
  import { View } from 'tamagui'
  export function Test(props) {
    return (
      <View marginBottom={props !== 123 ? 12 : props.mb} />
    )
  }
"
`;

exports[`string ternary and media prop remain distinct on the runtime component 1`] = `
"
    import { YStack } from 'tamagui'
    export function Test({ someString }) {
      return (
        <YStack
          width={someString ? 24 : 66}
          height="sm:30px"
        />
      )
    }
"
`;

exports[`ternary with mixed theme-token and non-token values preserves all props 1`] = `
"
    import { Text } from 'tamagui'
    export function Test({ isActive, label }) {
      return (
        <Text
          fontSize="3"
          fontWeight={isActive ? '600' : '400'}
          color={isActive ? 'color12' : 'color11'}
        >
          {label}
        </Text>
      )
    }
"
`;

exports[`theme value extraction should work when no theme variables used 1`] = `
"
    import { Paragraph } from 'tamagui'
    export function Test() {
      return (
        <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":23,"fontFamily":"-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif","fontWeight":400,"color":"red"}}>hello world</__TamaguiNativeText>
      )
    }

const __TamaguiNativeText = require('react-native').Text;"
`;

exports[`theme value extraction should work when theme variables used 1`] = `
"
    import { Paragraph } from 'tamagui'
    export function Test() {
      return (
        <__TamaguiNativeText style={{"letterSpacing":0,"fontSize":15,"lineHeight":23,"fontFamily":"-apple-system, system-ui, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Helvetica, Arial, sans-serif","fontWeight":400,"color":"hsla(0, 0%, 100%, 1)"}}>hello world</__TamaguiNativeText>
      )
    }

const __TamaguiNativeText = require('react-native').Text;"
`;
